<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Soc Med</string>
    <string name="login">Login</string>
    <string name="password">password</string>
    <string name="email">email</string>
    <string name="submit">Submit</string>
    <string name="description">Description</string>
    <string name="choose_image">Choose Image</string>

    <string name="todo" tools:ignore="DuplicateDefinition">TODO</string>
    <string name="profile">Profile</string>
    <string name="logout">Logout</string>
</resources>